[STREAMPIPES-360] Improve adapter management

--- a/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
+++ b/ui/src/app/connect/components/data-marketplace/data-marketplace.component.html
@@ -22,13 +22,15 @@
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="selectedIndexChange($event)">
                 <mat-tab label="Data Marketplace">
                 </mat-tab>
-                <mat-tab id="all-adapters" label="Running Adapters">
+                <mat-tab id="all-adapters" label="My Adapters">
                 </mat-tab>
             </mat-tab-group>
         </div>
-        <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center" style="padding-left:10px;padding-right:10px;font-size:14px;line-height:24px;border-bottom:1px solid #ccc"
-            *ngIf="selectedIndex === 0 && newAdapterFromDescription === undefined">
-            <button mat-icon-button id="startAdapterTutorial3" (click)="startAdapterTutorial3()" matTooltip="Tutorial: Generic Adapter">
+        <div fxFlex="100" fxLayout="row" fxLayoutAlign="end center"
+             style="padding-left:10px;padding-right:10px;font-size:14px;line-height:24px;border-bottom:1px solid #ccc"
+             *ngIf="selectedIndex === 0 && newAdapterFromDescription === undefined">
+            <button mat-icon-button id="startAdapterTutorial3" (click)="startAdapterTutorial3()"
+                    matTooltip="Tutorial: Generic Adapter">
                 <mat-icon color="primary">school</mat-icon>
             </button>
         </div>
@@ -36,11 +38,12 @@
 
     <div fxLayout="row" class="fixed-height data-marketplace-options">
 
-        <div class="data-marketplace-options-item pl-5" style="margin-top:8px;" fxLayoutAlign="start center" fxLayout="row">
+        <div class="data-marketplace-options-item pl-5" style="margin-top:8px;" fxLayoutAlign="start center"
+             fxLayout="row">
             <mat-icon color="primary">search</mat-icon>
             <mat-form-field class="form-style">
                 <input matInput placeholder="Find Element" value="" (input)="updateFilterTerm($event.target.value)"
-                    name="something">
+                       name="something">
             </mat-form-field>
         </div>
         <div class="data-marketplace-options-item">
@@ -63,38 +66,53 @@
         </div>
         <span fxFlex></span>
 
-        <mat-icon class="icon-style" matTooltip="Download All Adapter Templates" (click)="downloadAllAdapterTemplates()" style="margin-right: 15px; cursor: pointer;">cloud_download</mat-icon>
-        <mat-icon class="icon-style" matTooltip="Upload Adapter Templates" (click)="uploadAdapterTemplates()" style="margin-right: 15px; cursor: pointer;">cloud_upload</mat-icon>
+        <mat-icon class="icon-style" matTooltip="Download All Adapter Templates" (click)="downloadAllAdapterTemplates()"
+                  style="margin-right: 15px; cursor: pointer;">cloud_download
+        </mat-icon>
+        <mat-icon class="icon-style" matTooltip="Upload Adapter Templates" (click)="uploadAdapterTemplates()"
+                  style="margin-right: 15px; cursor: pointer;">cloud_upload
+        </mat-icon>
 
     </div>
-    <div class="container-fluid marketplace-container" *ngIf="adapterLoadingError" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+    <div class="container-fluid marketplace-container" *ngIf="adapterLoadingError" fxFlex="100"
+         fxLayoutAlign="center center" fxLayout="row">
         <h4>Available adapters could not be loaded. Did you start a StreamPipes Connect worker node?</h4>
     </div>
-    <div class="container-fluid marketplace-container" *ngIf="adaptersLoading" fxFlex="100" fxLayoutAlign="center center" fxLayout="row">
+    <div class="container-fluid marketplace-container" *ngIf="adaptersLoading" fxFlex="100"
+         fxLayoutAlign="center center" fxLayout="row">
         <mat-spinner [mode]="'indeterminate'" [diameter]="20"></mat-spinner>
         <h4>&nbsp;&nbsp;Searching for available adapters, please wait...</h4>
     </div>
     <div class="container-fluid marketplace-container" *ngIf="!adaptersLoading && !adapterLoadingError">
         <div *ngIf="selectedIndex === 0">
 
-            <div *ngIf="newAdapterFromDescription===undefined" fxLayout="row wrap" fxLayoutAlign="start stretch" class="adapter-description-container">
-                <sp-adapter-description attr.id="{{adapterDescription.name.replace(' ', '_')}}" class="adapter-description"
-                    fxFlex="33" (click)="selectAdapter(adapterDescription)" *ngFor="let adapterDescription of filteredAdapterDescriptions | filter:filterTerm"
-                    [adapter]="adapterDescription" (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"></sp-adapter-description>
+            <div *ngIf="newAdapterFromDescription===undefined" fxLayout="row wrap" fxLayoutAlign="start stretch"
+                 class="adapter-description-container">
+                <sp-adapter-description attr.id="{{adapterDescription.name.replace(' ', '_')}}"
+                                        class="adapter-description"
+                                        fxFlex="33" (click)="selectAdapter(adapterDescription)"
+                                        *ngFor="let adapterDescription of filteredAdapterDescriptions | filter:filterTerm"
+                                        [adapter]="adapterDescription"
+                                        (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"></sp-adapter-description>
             </div>
 
 
-            <div class="new-adapter-container" fxFlex="100" fxLayout="row" fxLayoutAlign="start start" *ngIf="newAdapterFromDescription!==undefined">
-                <sp-new-adapter fxFlex="100" (removeSelectionEmitter)="removeSelection($event)" [adapter]="newAdapterFromDescription"
-                    (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"></sp-new-adapter>
+            <div class="new-adapter-container" fxFlex="100" fxLayout="row" fxLayoutAlign="start start"
+                 *ngIf="newAdapterFromDescription!==undefined">
+                <sp-new-adapter fxFlex="100" (removeSelectionEmitter)="removeSelection($event)"
+                                [adapter]="newAdapterFromDescription"
+                                (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"></sp-new-adapter>
             </div>
 
         </div>
         <div *ngIf="selectedIndex === 1">
-            <div fxLayout="row wrap" fxLayoutAlign="start stretch" class="adapter-container">
-                <sp-adapter-description class="adapter-description" fxFlex="33" *ngFor="let adapter of filteredAdapters | filter:filterTerm"
-                    [adapter]="adapter" (createTemplateEmitter)="templateFromRunningAdapter(adapter)"
-                    (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"></sp-adapter-description>
+            <div fxFlex="100" class="adapter-container">
+                <sp-existing-adapters [existingAdapters]="filteredAdapters"
+                                      [filterTerm]="filterTerm"
+                                      (updateAdapterEmitter)="updateDescriptionsAndRunningAdatpers()"
+                                      (createTemplateEmitter)="templateFromRunningAdapter($event)">
+
+                </sp-existing-adapters>
             </div>
         </div>
     </div>
