--- a/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.scss
+++ b/ui/src/app/connect/components/data-marketplace/existing-adapters/existing-adapters.component.scss
@@ -16,21 +16,32 @@
  *
  */
 
-package org.apache.streampipes.storage.api;
 
-import org.apache.streampipes.model.connect.adapter.AdapterDescription;
+.mat-table {
+  background: #FAFAFA;
+}
 
-import java.util.List;
+.mat-paginator {
+  border-top: 1px solid rgba(0,0,0,.12);
+  background: #FAFAFA;
+}
 
-public interface IAdapterStorage {
+.mat-row:nth-child(even) {
+  background-color: #FAFAFA;
+}
+.mat-row:nth-child(odd) {
+  background-color:#ffffff;
+}
 
-    List<AdapterDescription> getAllAdapters();
+.adapter-icon {
+  max-height:50px;
+}
 
-    String storeAdapter(AdapterDescription adapter);
-
-    void updateAdapter(AdapterDescription adapter);
-
-    AdapterDescription getAdapter(String adapterId);
-
-    void deleteAdapter(String adapterId);
+.historic {
+  cursor: pointer;
+  color: #ffa23b;
+}
+.real-time {
+  cursor: pointer;
+  color: #FFEB3B;
 }
