--- a/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
+++ b/ui/src/app/add/components/endpoint-item/endpoint-item.component.html
@@ -17,7 +17,7 @@
   -->
 
 <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="pipeline-element-box"
-     style="padding:5px;margin-bottom:10px;background:{{getSelectedBackground()}}">
+     style="padding:5px;margin-bottom:10px;background:{{getSelectedBackground()}}" [ngStyle]="item.editable ? {opacity: 1} : {opacity: 0.5}">
     <div fxFlex fxLayout="row" style="width:100%;">
         <div style="margin-right:10px;margin-left:10px;margin-top:10px;">
             <div class="draggable-icon {{item.type}}">{{iconText(item.name)}}</div>
