[STREAMPIPES-361] Prevent running pipelines to be updated

--- a/ui/src/app/pipeline-details/components/actions/pipeline-actions.component.html
+++ b/ui/src/app/pipeline-details/components/actions/pipeline-actions.component.html
@@ -43,6 +43,7 @@
             <div fxFlex="30">
                 <button mat-button mat-raised-button color="primary"
                         matTooltip="Modify Pipeline" matTooltipPosition="above"
+                        [disabled]="pipeline.running"
                         (click)="pipelineOperationsService.modifyPipeline(pipeline._id)">
                     <mat-icon>mode_edit</mat-icon>
                     <span>&nbsp;Modify</span>
