--- a/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
+++ b/ui/src/app/editor/components/pipeline-element-options/pipeline-element-options.component.html
@@ -42,7 +42,7 @@
             <button mat-button mat-icon-button matTooltip="Compatible Elements" [matTooltipPosition]="'below'"
                     [disabled]="!possibleElements || possibleElements.length == 0 || !isConfigured()"
                     (click)="openPossibleElementsDialog()">
-                <i class="material-icons">visibility</i>
+                <i class="material-icons">account_tree</i>
         </button>
         </span>
         <span class="options-button recommended-button"
@@ -56,7 +56,8 @@
         </span>
         <span class="options-button help-button" style="z-index:10">
             <button matTooltip="Help" [matTooltipPosition]="'below'"
-                    mat-button mat-icon-button (click)="openHelpDialog()">?
+                    mat-button mat-icon-button (click)="openHelpDialog()">
+                <i class="material-icons">help</i>
                 </button>
         </span>
         <div class="editor-pe-info" [ngClass]="'pe-info-' + pipelineElementCssType">
