--- a/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.scss
+++ b/ui/src/app/editor/components/pipeline-element-preview/pipeline-element-preview.component.scss
@@ -16,20 +16,23 @@
  *
  */
 
-@import '../../scss/variables';
-
-.text-color {
-  color: $sp-color-accent;
+.data-preview {
+  position: relative;
+  left: 0px;
+  top: 120px;
+  width: 250px;
+  height: 120px;
+  background: white;
+  overflow: auto;
+  border: 1px solid gray;
+  box-shadow: 0.175em 0.175em 0 0 rgba(15, 28, 63, 0.125);
+  z-index:50;
 }
 
-.page-container {
-  border: 0;
+.preview-table {
+  font-size:9pt;
 }
 
-.border {
-  border: 1px solid #cccccc;
-}
-
-.pipeline-assembly-margin {
+.mt-10 {
   margin-top: 10px;
 }
