--- a/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
+++ b/ui/src/app/dashboard/dialogs/add-widget/add-visualization-dialog.component.html
@@ -73,8 +73,7 @@
         <button mat-button mat-raised-button class="mat-basic" (click)="onCancel()" style="margin-right:10px;">
             Cancel
         </button>
-        <button mat-button mat-raised-button class="mat-basic" (click)="back()" *ngIf="(!('select-pipeline'===page))
-        && !(editMode)" style="margin-right:10px;">
+        <button mat-button mat-raised-button class="mat-basic" (click)="back()" *ngIf="(!('select-pipeline'===page))" style="margin-right:10px;">
             Back
         </button>
         <button mat-button mat-raised-button color="primary" (click)="next()" [disabled]="'configure-widget' === page
