--- a/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
+++ b/ui/src/app/dashboard/components/widget/dashboard-widget.component.html
@@ -48,88 +48,88 @@
                 </button>
             </div>
             <div *ngIf="widgetLoaded && pipelineRunning" class="h-100">
-                <div *ngIf="widget.widgetType === 'number'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'number'" class="h-100 p-0">
                     <number-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
                                    [widget]="widget" [editMode]="editMode"
                                    [widgetConfig]="configuredWidget" [widgetDataConfig]="widgetDataConfig" class="h-100"></number-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'line'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'line'" class="h-100 p-0">
                     <line-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
                                  [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></line-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'area'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'area'" class="h-100 p-0">
                     <area-widget [gridsterItemComponent]="gridsterItemComponent" [editMode]="editMode"
                                  [gridsterItem]="item" [widget]="widget" [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></area-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'table'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'table'" class="h-100 p-0">
                     <table-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></table-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'gauge'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'gauge'" class="h-100 p-0">
                     <gauge-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></gauge-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'image'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'image'" class="h-100 p-0">
                     <image-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></image-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'map'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'map'" class="h-100 p-0">
                     <map-widget [gridsterItemComponent]="gridsterItemComponent"
                                   [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                   [widgetConfig]="configuredWidget"
                                   [widgetDataConfig]="widgetDataConfig" class="h-100"></map-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'raw'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'raw'" class="h-100 p-0">
                     <raw-widget [gridsterItemComponent]="gridsterItemComponent"
                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></raw-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'html'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'html'" class="h-100 p-0">
                     <html-widget [gridsterItemComponent]="gridsterItemComponent"
                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></html-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'trafficlight'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'trafficlight'" class="h-100 p-0">
                     <traffic-light-widget [gridsterItemComponent]="gridsterItemComponent"
                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></traffic-light-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'pallet'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'pallet'" class="h-100 p-0">
                     <sp-pallet [gridsterItemComponent]="gridsterItemComponent"
                                  [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                  [widgetConfig]="configuredWidget"
                                  [widgetDataConfig]="widgetDataConfig" class="h-100"></sp-pallet>
                 </div>
-                <div *ngIf="widget.widgetType === 'wordcloud'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'wordcloud'" class="h-100 p-0">
                     <wordcloud-widget [gridsterItemComponent]="gridsterItemComponent"
                                 [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                 [widgetConfig]="configuredWidget"
                                 [widgetDataConfig]="widgetDataConfig" class="h-100"></wordcloud-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'status'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'status'" class="h-100 p-0">
                     <status-widget [gridsterItemComponent]="gridsterItemComponent"
                                       [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                       [widgetConfig]="configuredWidget"
                                       [widgetDataConfig]="widgetDataConfig" class="h-100"></status-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'bar-race'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'bar-race'" class="h-100 p-0">
                     <bar-race-widget [gridsterItemComponent]="gridsterItemComponent"
                                    [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                    [widgetConfig]="configuredWidget"
                                    [widgetDataConfig]="widgetDataConfig" class="h-100"></bar-race-widget>
                 </div>
-                <div *ngIf="widget.widgetType === 'stacked-line-chart'" class="h-100 p-0">
+                <div *ngIf="configuredWidget.widgetType === 'stacked-line-chart'" class="h-100 p-0">
                     <stacked-line-chart-widget [gridsterItemComponent]="gridsterItemComponent"
                                      [gridsterItem]="item" [widget]="widget" [editMode]="editMode"
                                      [widgetConfig]="configuredWidget"
