--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -18,6 +18,12 @@
 
 <div fxFlex="100" fxLayout="column" *ngIf="filteredPipelinesAvailable" style="margin:1px;">
     <table fxFlex="100" mat-table [dataSource]="dataSource" style="width: 100%;" matSort>
+        <ng-container matColumnDef="status">
+            <th mat-header-cell mat-sort-header *matHeaderCellDef> Status</th>
+            <td mat-cell *matCellDef="let pipeline">
+                <div [matTooltip]="pipeline.running ? 'Running' : 'Stopped'" class="light" [ngClass]="pipeline.running ? 'light-green' : 'light-neutral'"></div>
+            </td>
+        </ng-container>
         <ng-container matColumnDef="start">
             <th mat-header-cell *matHeaderCellDef> Start</th>
             <td mat-cell *matCellDef="let pipeline">
