--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.scss
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.scss
@@ -22,13 +22,46 @@
 }
 
 .mat-paginator {
-  border-top: 1px solid rgba(0,0,0,.12);
+  border-top: 1px solid rgba(0, 0, 0, .12);
   background: #FAFAFA;
 }
 
 .mat-row:nth-child(even) {
   background-color: #FAFAFA;
 }
+
 .mat-row:nth-child(odd) {
-  background-color:#ffffff;
+  background-color: #ffffff;
+}
+
+.mat-column-status {
+  width: 80px;
+  max-width: 80px;
+}
+
+.light {
+  background-color:rgba(0, 0, 0, 0.3);
+  border-radius:50%;
+  width: 15px;
+  height: 15px;
+}
+
+.light-red {
+  background-color: red;
+  box-shadow: 0 0 20px 5px red;
+}
+
+.light-yellow {
+  background-color: yellow;
+  box-shadow: 0 0 20px 5px yellow;
+}
+
+.light-green {
+  background-color: green;
+  box-shadow: 0 0 5px 2px green;
+}
+
+.light-neutral {
+  background-color: #b4b4b4;
+  box-shadow: 0 0 5px 2px #b4b4b4;
 }
