[STREAMPIPES-372] Add pipeline health check and restore feature

--- a/ui/src/app/pipelines/dialog/pipeline-status/pipeline-status-dialog.component.scss
+++ b/ui/src/app/pipelines/dialog/pipeline-status/pipeline-status-dialog.component.scss
@@ -25,6 +25,8 @@
 
 .error-message {
   background-color: black;
+  font: 1.3rem Inconsolata, monospace;
+  text-shadow: 0 0 5px #C8C8C8;
   color: white;
   padding: 10px;
   width: 100%;
