--- a/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
+++ b/ui/src/app/pipelines/components/pipeline-overview/pipeline-overview.component.html
@@ -21,7 +21,20 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell mat-sort-header *matHeaderCellDef> Status</th>
             <td mat-cell *matCellDef="let pipeline">
-                <div [matTooltip]="pipeline.running ? 'Running' : 'Stopped'" class="light" [ngClass]="pipeline.running ? 'light-green' : 'light-neutral'"></div>
+                <div fxLayout="row" fxLayoutAlign="start center">
+                <div *ngIf="pipeline.running && pipeline.healthStatus == 'OK'" class="light light-green"></div>
+                <div *ngIf="pipeline.running && pipeline.healthStatus == 'REQUIRES_ATTENTION'" class="light light-yellow"></div>
+                <div *ngIf="pipeline.running && pipeline.healthStatus == 'FAILURE'" class="light light-red"></div>
+                <div *ngIf="!pipeline.running" class="light light-neutral" [matTooltip]="'Stopped'"></div>
+                <button class="ml-10"
+                        mat-button
+                        mat-icon-button
+                        (click)="openPipelineNotificationsDialog(pipeline)"
+                        *ngIf="pipeline.pipelineNotifications.length > 0"
+                        matTooltip="{{pipeline.pipelineNotifications.length}} notification{{pipeline.pipelineNotifications.length > 1 ? 's' : ''}}">
+                    <mat-icon color="warn">warning</mat-icon>
+                </button>
+                </div>
             </td>
         </ng-container>
         <ng-container matColumnDef="start">
