[STREAMPIPES-375] Persist position of pipeline elements on pipeline canvas

--- a/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
+++ b/ui/src/app/editor/components/pipeline-assembly/pipeline-assembly.component.html
@@ -145,6 +145,7 @@
                           [allElements]="allElements"
                           [preview]="false"
                           [pipelineCached]="pipelineCached"
+                          [pipelineCanvasMetadata]="pipelineCanvasMetadata"
                           [pipelineCacheRunning]="pipelineCacheRunning"
                           (pipelineCachedChanged)="pipelineCached=$event"
                           (pipelineCacheRunningChanged)="pipelineCacheRunning=$event">
